--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,9 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 set -g mouse on
+set -g renumber-windows on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
