--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,3 +20,10 @@ set -g renumber-windows on
 set -g base-index 1
 setw -g pane-base-index 1
 
+setw -g mode-keys vi
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection
+
+bind -n C-e split-window -h
+bind -n C-o split-window -v
+
