--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,8 +24,8 @@ setw -g mode-keys vi
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection
 
-bind -n C-e split-window -h
-bind -n C-o split-window -v
+bind -n C-e split-window -h -c "#{pane_current_path}"
+bind -n C-o split-window -v -c "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
